src/objects/Program_Document_Xref__c.object
<CustomObject>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Program Document Xrefs</relationshipLabel>
        <relationshipName>Program_Document_Xrefs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Program Document Xref</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document__c</columns>
        <columns>Program__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Program_Doc_Xref_{0000000}</displayFormat>
        <label>Program_Document_Xref__c Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Document Xrefs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fid_Doc_Xref_must_have_Prog_Loc_SLin</fullName>
        <active>false</active>
        <description>A validation rule to insure that Program Document Xrefs for Fidelity Documents have a Program, Location, Service Line, Level/Phase, and Order value.</description>
        <errorConditionFormula>IF(  ISPICKVAL(Document__r.Type__c, &apos;Fidelity Document&apos;) &amp;&amp; Program__c!=&apos;&apos; &amp;&amp; Location__c!=&apos;&apos; &amp;&amp; Service_Line__c!=&apos;&apos;, true, false)</errorConditionFormula>
        <errorMessage>A Fidelity Document must have a Program, Location, and Service Line value.</errorMessage>
    </validationRules>
</CustomObject>